# RightpathHR_Backend

./: README.md
Frontend/: package-lock.json  package.json  tailwind.config.ts
Frontend/src/app/: layout.tsx  page.tsx
Frontend/src/app/about/: page.tsx
Frontend/src/app/components/: AuroraBackgroundDemo.tsx  BackgroundBeamsDemo.tsx  BackgroundBoxesDemo.tsx  BentoGridDemo.tsx  CardHoverEffectDemo.tsx  ContactUsFormDemo.tsx  FloatingNavDemo.tsx  GlobeDemo.tsx  ImagesSliderDemo.tsx  InfiniteMovingCardsDemo.tsx  LoginFormDemo.tsx  MeteorsDemo.tsx  NavbarDemo.tsx  PlaceholdersAndVanishInputDemo.tsx  SignupFormDemo.tsx  TabsDemo.tsx  TextGenerateEffectDemo.tsx  TypewriterEffectSmoothDemo.tsx
Frontend/src/app/contact/: page.tsx
Frontend/src/app/data/: metadata.ts
Frontend/src/app/redux/: store.ts
Home/: db.sqlite3  pyproject.toml
Home/Home/: settings.py  urls.py
Home/apps/authapp/: apps.py  models.py  utlis.py
Home/apps/authapp/api/v1/: serializers.py  urls.py  views.py
Home/apps/authapp/migrations/: 0001_initial.py
Home/apps/common/: common_repository.py
Home/apps/homeapp/: apps.py  models.py
Home/apps/homeapp/api/v1/: serializers.py  urls.py  views.py
Home/homeapp/: models.py  serializers.py  urls.py  views.py
Home/homeapp/migrations/: 0001_initial.py  0002_alter_destination_image_url.py  0003_remove_destination_image_url.py  0004_destination_image_url.py  0005_alter_destination_image_url.py
Home/project/: urls.py
Home/project/settings/: base.py  local.py  prod.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
(+19 files in other folders)
